# work-buddy

./: CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup_mock_servers.sh
configs/: app.yaml  ice_rules.yaml
configs/projects/: payment-service.yaml  user-portal.yaml
docs/: PRD.md
evidence/: evidence_summary.html  example-site_homepage_check_react-app_package.json  httpbin-test_forms_test_react-app_package.json
evidence/recordings/: example-site_homepage_check_20260323_141824.webm  example-site_homepage_check_20260323_144012.webm  example-site_homepage_check_20260323_144448.webm  example-site_homepage_check_20260323_144646.webm  example-site_homepage_check_20260323_145119.webm  httpbin-test_forms_test_20260323_141914.webm  httpbin-test_forms_test_20260323_144101.webm  httpbin-test_forms_test_20260323_144535.webm  httpbin-test_forms_test_20260323_144742.webm  httpbin-test_forms_test_20260323_145207.webm
mock_servers/: health_check.sh
mock_servers/mock_confluence_server/: Dockerfile  main.py
mock_servers/mock_grafana_server/: Dockerfile  main.py
mock_servers/mock_jira_server/: Dockerfile  main.py
mock_servers/mock_opensearch_server/: Dockerfile  main.py
mock_servers/mock_springboot_admin_server/: Dockerfile  main.py
mock_servers/mock_sso_server/: Dockerfile  main.py
mock_servers/seed_data/: opensearch.yaml
mock_servers/ui/: index.html  package-lock.json  package.json
scripts/: generate_evidence.py
src/work_buddy/: __init__.py
tests/e2e/: test_workflows.py
tests/integration/: test_browser_agent_integration.py  test_coordinator.py
tests/unit/: test_browser_agent.py  test_confluence_rag.py  test_evidence_gatherer.py  test_ice_compliance.py  test_jira_agent.py  test_llm.py  (+3 more)
(+73 files in other folders)
